Added fix for time_indictaors displaying wrong [closes #5]

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <span class="time_indicator" data-left="8"></span>
           <span class="time_indicator" data-left="9"></span>
           <span class="time_indicator" data-left="10"></span>
+          <span class="time_indicator" data-left="11"></span>
           <span id="current_time_indicator" class="time_indicator"></span>
 
         </div>
