Added time and date stuff, added comment headers to CSS, added tags

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <section id="timespans">
       <div id="timeline">
-        <h5 id="date">Today</h5>
+        <h6 id="date">Today - <span id="date_label"></span></h6>
         <div id="current_time">
-          <span id="time_label">20:32:00</span>
+          <span id="time_label">00:00:00</span>
           <span class="time_indicator" data-left="1"></span>
           <span class="time_indicator" data-left="2"></span>
           <span class="time_indicator" data-left="3"></span>
@@ -35,6 +35,11 @@
       <div class="actions shadow">
         <button class="button-add">Track a new activity</button>
       </div>
+    </section>
+    <section class="padded">
+      <p class="tags">
+        <a class="tag">All</a>
+      </p>
     </section>
   </body>
 </html>
