finished college CA portion

--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
         <h6 id="date">Today - <span id="date_label"></span></h6>
         <div id="current_time">
           <span id="time_label">00:00:00</span>
-          <span class="time_indicator" data-left="1"></span>
-          <span class="time_indicator" data-left="2"></span>
-          <span class="time_indicator" data-left="3"></span>
-          <span class="time_indicator" data-left="4"></span>
-          <span class="time_indicator" data-left="5"></span>
-          <span class="time_indicator" data-left="6"></span>
-          <span class="time_indicator" data-left="7"></span>
-          <span class="time_indicator" data-left="8"></span>
-          <span class="time_indicator" data-left="9"></span>
-          <span class="time_indicator" data-left="10"></span>
-          <span class="time_indicator" data-left="11"></span>
+          <span class="time_indicator" data-left="1"><span class="timelabel">00:00</span></span>
+          <span class="time_indicator" data-left="2"><span class="timelabel">00:00</span></span>
+          <span class="time_indicator" data-left="3"><span class="timelabel">00:00</span></span>
+          <span class="time_indicator" data-left="4"><span class="timelabel">00:00</span></span>
+          <span class="time_indicator" data-left="5"><span class="timelabel">00:00</span></span>
+          <span class="time_indicator" data-left="6"><span class="timelabel">00:00</span></span>
+          <span class="time_indicator" data-left="7"><span class="timelabel">00:00</span></span>
+          <span class="time_indicator" data-left="8"><span class="timelabel">00:00</span></span>
+          <span class="time_indicator" data-left="9"><span class="timelabel">00:00</span></span>
+          <span class="time_indicator" data-left="10"><span class="timelabel">00:00</span></span>
+          <span class="time_indicator" data-left="11"><span class="timelabel">00:00</span></span>
+          <span class="time_indicator" data-left="12"><span class="timelabel">00:00</span></span>
           <span id="current_time_indicator" class="time_indicator"></span>
         </div>
       </div>
@@ -55,9 +56,6 @@
         <input type="submit" id="submit_new_activity">
       </div>
     </section>
-
-
-
 
   <!-- Templates -->
 
