--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
   <head>
     <title>Partytime</title>
+    <!-- Insert the css files -->
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/common.css">
+    <!-- Get the script for jQuery and the tmpl plugin -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>
+    <!-- Add the js script that will load in all of the other js scripts with AJAX -->
     <script src="js/scripts.js" type="text/javascript"></script>
   </head>
   <body>
@@ -47,6 +50,7 @@
       <!-- Activities will be inserted here -->
     </section>
 
+    <!-- Form for Activities -->
     <section id="new_activity_form">
       <div id="back"></div>
       <div class="modal">
